--- a/components/node-jenkins-1211/overlays/stage/deployment-patch.yaml
+++ b/components/node-jenkins-1211/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap-test-organization-jk/rhtap-qe:jenkins-a5377228e24675deb75271390d0f1030f27f4cb0
         name: container-image  
